# Flareon

./: CMakeLists.txt  Config.hpp.in  README.md
ext/gfft/: CMakeLists.txt
ext/gfft/include/GFFT/: GFFT.h
ext/gfft/src/: CMakeLists.txt  gfft.cpp
res/: CMakeLists.txt  cones.txt
res/lensdata/: FORMAT.txt  test.json
res/shader/: aperture.glsl  flare.glsl  fullscreen.glsl  hdr.glsl  plot.glsl  showfourier.glsl  showfrft.glsl  starburst.glsl
src/: CMakeLists.txt
src/flareon/: CMakeLists.txt  Concurrent.hpp  Flareon.hpp  Initial3D.hpp  Window.hpp  main.cpp
